Tue Apr  8 000:00:06 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/DynamicInterface/DII_Invocation.cpp:

          Fixed exception handling.

        * tests/Param_Test/except.cpp:

          Cosmetic changes.

        * tests/Param_Test/client.cpp:
        * tests/Param_Test/options.cpp:
        * tests/Param_Test/server.cpp:

          Changes to allow a default filename for the server's IOR.

Mon Apr  7 19:20:55 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_valuetype/obv_module.cpp (visit_eventtype):

	  Fixed resetting of context states in this method.

Mon Apr  7 16:53:24 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/DynamicAny/DynCommon.cpp (get_any):

          Another stab at making all our compilers happy with
          temporary variations in constness.

Mon Apr 07 14:11:02 2003  Pradeep Gore  <pradeep@oomworks.com>

	* orbsvcs/examples/CosEC/RtEC_Based/tests/Multiple/Supplier:
	  Corrected the code to populate the Any data with a payload. 
	
Mon Apr  7 11:56:59 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_root/root.cpp (visit_root):

          Added a check at this higher level before creating and 
          launching a visitor for OBV_* module code. This visitor
          should not be created unless we are generating code in
          stub files. Formerly the check of context state that catches
          this was done at a lower level, in visit_* methods of
          subclassed visitors. One case for eventtypes was missed,
          which was the cause of the invesitgation.

        * TAO_IDL/be/be_visitor_valuetype/obv_module.cpp (visit_eventtype):

          Removed error message for case which is now caught at a 
          higher level as described above, and made other cosmetic
          changes to the source code. Thanks to Nanbor Wang
          <nanbor@cse.wustl.edu> for reporting the problem.
